uploading various files for presentation, start of final repo org

--- a/users/MassProtest_Visualizations.ipynb
+++ b/users/MassProtest_Visualizations.ipynb
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,16 +322,16 @@
     "#                    'country_alpha3', \n",
     "                    'region', \n",
     "#                     'protesterviolence', \n",
-    "#                     'protester_id_type', \n",
-    "#                     'partipants_number', \n",
+    "                    'protester_id_type', \n",
+    "                    'partipants_number', \n",
     "#                     'protest_size_category', \n",
-    "                    'protest_size_category_Less than 50',\n",
-    "                    'protest_size_category_50-99',\n",
-    "                    'protest_size_category_100-999',\n",
-    "                    'protest_size_category_1,000-4,999',\n",
-    "                    'protest_size_category_5,000-9,999',\n",
-    "                    'protest_size_category_10,000-100,000',\n",
-    "                    'protest_size_category_Over 100,000',\n",
+    "#                     'protest_size_category_Less than 50',\n",
+    "#                     'protest_size_category_50-99',\n",
+    "#                     'protest_size_category_100-999',\n",
+    "#                     'protest_size_category_1,000-4,999',\n",
+    "#                     'protest_size_category_5,000-9,999',\n",
+    "#                     'protest_size_category_10,000-100,000',\n",
+    "#                     'protest_size_category_Over 100,000',\n",
     "#                     'pop_density', \n",
     "#                     'pop_total', \n",
     "#                     'prosperity_2020', \n",
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -383,13 +383,8 @@
        "      <th></th>\n",
        "      <th>country</th>\n",
        "      <th>region</th>\n",
-       "      <th>protest_size_category_Less than 50</th>\n",
-       "      <th>protest_size_category_50-99</th>\n",
-       "      <th>protest_size_category_100-999</th>\n",
-       "      <th>protest_size_category_1,000-4,999</th>\n",
-       "      <th>protest_size_category_5,000-9,999</th>\n",
-       "      <th>protest_size_category_10,000-100,000</th>\n",
-       "      <th>protest_size_category_Over 100,000</th>\n",
+       "      <th>protester_id_type</th>\n",
+       "      <th>partipants_number</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -397,69 +392,39 @@
        "      <th>0</th>\n",
        "      <td>Canada</td>\n",
        "      <td>North America</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>workers_unions</td>\n",
+       "      <td>1000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Canada</td>\n",
        "      <td>North America</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>students_youth</td>\n",
+       "      <td>1000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Canada</td>\n",
        "      <td>North America</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>political_group</td>\n",
+       "      <td>500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Canada</td>\n",
        "      <td>North America</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>ethnic_group</td>\n",
+       "      <td>100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Canada</td>\n",
        "      <td>North America</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>locals_residents</td>\n",
+       "      <td>950</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -469,137 +434,60 @@
        "      <th>15174</th>\n",
        "      <td>Papua New Guinea</td>\n",
        "      <td>Oceania</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>locals_residents</td>\n",
+       "      <td>100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15175</th>\n",
        "      <td>Papua New Guinea</td>\n",
        "      <td>Oceania</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>students_youth</td>\n",
+       "      <td>1000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15176</th>\n",
        "      <td>Papua New Guinea</td>\n",
        "      <td>Oceania</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>political_group</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15177</th>\n",
        "      <td>Papua New Guinea</td>\n",
        "      <td>Oceania</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>political_group</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15178</th>\n",
        "      <td>Papua New Guinea</td>\n",
        "      <td>Oceania</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>locals_residents</td>\n",
+       "      <td>100</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>15179 rows × 9 columns</p>\n",
+       "<p>15179 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                country         region  protest_size_category_Less than 50  \\\n",
-       "0                Canada  North America                                   0   \n",
-       "1                Canada  North America                                   0   \n",
-       "2                Canada  North America                                   0   \n",
-       "3                Canada  North America                                   0   \n",
-       "4                Canada  North America                                   0   \n",
-       "...                 ...            ...                                 ...   \n",
-       "15174  Papua New Guinea        Oceania                                   0   \n",
-       "15175  Papua New Guinea        Oceania                                   0   \n",
-       "15176  Papua New Guinea        Oceania                                   0   \n",
-       "15177  Papua New Guinea        Oceania                                   0   \n",
-       "15178  Papua New Guinea        Oceania                                   0   \n",
+       "                country         region protester_id_type  partipants_number\n",
+       "0                Canada  North America    workers_unions               1000\n",
+       "1                Canada  North America    students_youth               1000\n",
+       "2                Canada  North America   political_group                500\n",
+       "3                Canada  North America      ethnic_group                100\n",
+       "4                Canada  North America  locals_residents                950\n",
+       "...                 ...            ...               ...                ...\n",
+       "15174  Papua New Guinea        Oceania  locals_residents                100\n",
+       "15175  Papua New Guinea        Oceania    students_youth               1000\n",
+       "15176  Papua New Guinea        Oceania   political_group                 50\n",
+       "15177  Papua New Guinea        Oceania   political_group                 50\n",
+       "15178  Papua New Guinea        Oceania  locals_residents                100\n",
        "\n",
-       "       protest_size_category_50-99  protest_size_category_100-999  \\\n",
-       "0                                0                              0   \n",
-       "1                                0                              0   \n",
-       "2                                0                              1   \n",
-       "3                                0                              1   \n",
-       "4                                0                              1   \n",
-       "...                            ...                            ...   \n",
-       "15174                            0                              1   \n",
-       "15175                            0                              0   \n",
-       "15176                            1                              0   \n",
-       "15177                            1                              0   \n",
-       "15178                            0                              1   \n",
-       "\n",
-       "       protest_size_category_1,000-4,999  protest_size_category_5,000-9,999  \\\n",
-       "0                                      1                                  0   \n",
-       "1                                      1                                  0   \n",
-       "2                                      0                                  0   \n",
-       "3                                      0                                  0   \n",
-       "4                                      0                                  0   \n",
-       "...                                  ...                                ...   \n",
-       "15174                                  0                                  0   \n",
-       "15175                                  1                                  0   \n",
-       "15176                                  0                                  0   \n",
-       "15177                                  0                                  0   \n",
-       "15178                                  0                                  0   \n",
-       "\n",
-       "       protest_size_category_10,000-100,000  \\\n",
-       "0                                         0   \n",
-       "1                                         0   \n",
-       "2                                         0   \n",
-       "3                                         0   \n",
-       "4                                         0   \n",
-       "...                                     ...   \n",
-       "15174                                     0   \n",
-       "15175                                     0   \n",
-       "15176                                     0   \n",
-       "15177                                     0   \n",
-       "15178                                     0   \n",
-       "\n",
-       "       protest_size_category_Over 100,000  \n",
-       "0                                       0  \n",
-       "1                                       0  \n",
-       "2                                       0  \n",
-       "3                                       0  \n",
-       "4                                       0  \n",
-       "...                                   ...  \n",
-       "15174                                   0  \n",
-       "15175                                   0  \n",
-       "15176                                   0  \n",
-       "15177                                   0  \n",
-       "15178                                   0  \n",
-       "\n",
-       "[15179 rows x 9 columns]"
+       "[15179 rows x 4 columns]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,20 +498,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mass_charts_partcat = mass_charts.groupby(['region','country']).sum()"
+    "mass_charts_protID = mass_charts.groupby(['region','country', 'protester_id_type']).count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mass_charts_partcat.to_csv('./data/mass_charts_partcat.csv')"
+    "mass_charts_protID.to_csv('./data/mass_charts_protID.csv')"
    ]
   },
   {
