--- a/users/multi_label_modeling_heather.ipynb
+++ b/users/multi_label_modeling_heather.ipynb
@@ -374,6 +374,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['protestnumber', 'protesterviolence', 'partipants_number',\n",
+       "       'pop_density', 'prosperity_2020', 'region_Africa', 'region_Asia',\n",
+       "       'region_Central America', 'region_Europe', 'region_MENA',\n",
+       "       'region_North America', 'region_Oceania', 'region_South America',\n",
+       "       'protest_size_category_1,000-4,999',\n",
+       "       'protest_size_category_10,000-100,000', 'protest_size_category_100-999',\n",
+       "       'protest_size_category_5,000-9,999', 'protest_size_category_50-99',\n",
+       "       'protest_size_category_Less than 50',\n",
+       "       'protest_size_category_Over 100,000',\n",
+       "       'protester_id_type_civil_human_rights',\n",
+       "       'protester_id_type_ethnic_group', 'protester_id_type_locals_residents',\n",
+       "       'protester_id_type_pensioners_retirees',\n",
+       "       'protester_id_type_political_group', 'protester_id_type_prisoners',\n",
+       "       'protester_id_type_protestors_generic',\n",
+       "       'protester_id_type_religious_group',\n",
+       "       'protester_id_type_soldiers_veterans',\n",
+       "       'protester_id_type_students_youth',\n",
+       "       'protester_id_type_victims_families', 'protester_id_type_women',\n",
+       "       'protester_id_type_workers_unions', 'labor_wage_dispute',\n",
+       "       'land_farm_issue', 'police_brutality', 'political_behavior_process',\n",
+       "       'price increases_tax_policy', 'removal_of_politician',\n",
+       "       'social_restrictions'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 351,
    "metadata": {},
    "outputs": [],
