--- a/users/data_cleaning_heather.ipynb
+++ b/users/data_cleaning_heather.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -57,42 +57,43 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 15239 entries, 0 to 17141\n",
-      "Data columns (total 30 columns):\n",
+      "RangeIndex: 17145 entries, 0 to 17144\n",
+      "Data columns (total 31 columns):\n",
       " #   Column                 Non-Null Count  Dtype  \n",
       "---  ------                 --------------  -----  \n",
-      " 0   id                     15239 non-null  int64  \n",
-      " 1   country                15239 non-null  object \n",
-      " 2   ccode                  15239 non-null  int64  \n",
-      " 3   year                   15239 non-null  int64  \n",
-      " 4   region                 15239 non-null  object \n",
-      " 5   protestnumber          15239 non-null  int64  \n",
-      " 6   startday               15239 non-null  float64\n",
-      " 7   startmonth             15239 non-null  float64\n",
-      " 8   startyear              15239 non-null  float64\n",
-      " 9   endday                 15239 non-null  float64\n",
-      " 10  endmonth               15239 non-null  float64\n",
-      " 11  endyear                15239 non-null  float64\n",
-      " 12  protesterviolence      15239 non-null  float64\n",
-      " 13  location               15218 non-null  object \n",
-      " 14  participants_category  9887 non-null   object \n",
-      " 15  participants           15227 non-null  object \n",
-      " 16  protesteridentity      14684 non-null  object \n",
-      " 17  protesterdemand1       15238 non-null  object \n",
-      " 18  protesterdemand2       2977 non-null   object \n",
-      " 19  protesterdemand3       383 non-null    object \n",
-      " 20  protesterdemand4       779 non-null    object \n",
-      " 21  stateresponse1         15208 non-null  object \n",
-      " 22  stateresponse2         2888 non-null   object \n",
-      " 23  stateresponse3         930 non-null    object \n",
-      " 24  stateresponse4         244 non-null    object \n",
-      " 25  stateresponse5         797 non-null    object \n",
-      " 26  stateresponse6         16 non-null     object \n",
-      " 27  stateresponse7         857 non-null    object \n",
-      " 28  sources                15235 non-null  object \n",
-      " 29  notes                  15193 non-null  object \n",
-      "dtypes: float64(7), int64(4), object(19)\n",
-      "memory usage: 3.6+ MB\n"
+      " 0   id                     17145 non-null  int64  \n",
+      " 1   country                17145 non-null  object \n",
+      " 2   ccode                  17145 non-null  int64  \n",
+      " 3   year                   17145 non-null  int64  \n",
+      " 4   region                 17145 non-null  object \n",
+      " 5   protest                17145 non-null  int64  \n",
+      " 6   protestnumber          17145 non-null  int64  \n",
+      " 7   startday               15239 non-null  float64\n",
+      " 8   startmonth             15239 non-null  float64\n",
+      " 9   startyear              15239 non-null  float64\n",
+      " 10  endday                 15239 non-null  float64\n",
+      " 11  endmonth               15239 non-null  float64\n",
+      " 12  endyear                15239 non-null  float64\n",
+      " 13  protesterviolence      15758 non-null  float64\n",
+      " 14  location               15218 non-null  object \n",
+      " 15  participants_category  9887 non-null   object \n",
+      " 16  participants           15746 non-null  object \n",
+      " 17  protesteridentity      14684 non-null  object \n",
+      " 18  protesterdemand1       15238 non-null  object \n",
+      " 19  protesterdemand2       2977 non-null   object \n",
+      " 20  protesterdemand3       383 non-null    object \n",
+      " 21  protesterdemand4       831 non-null    object \n",
+      " 22  stateresponse1         15208 non-null  object \n",
+      " 23  stateresponse2         2888 non-null   object \n",
+      " 24  stateresponse3         930 non-null    object \n",
+      " 25  stateresponse4         244 non-null    object \n",
+      " 26  stateresponse5         849 non-null    object \n",
+      " 27  stateresponse6         16 non-null     object \n",
+      " 28  stateresponse7         920 non-null    object \n",
+      " 29  sources                15235 non-null  object \n",
+      " 30  notes                  15193 non-null  object \n",
+      "dtypes: float64(7), int64(5), object(19)\n",
+      "memory usage: 4.1+ MB\n"
      ]
     }
    ],
