saving files to pull new repo org

--- a/users/log_reg_for_metrics_en.ipynb
+++ b/users/log_reg_for_metrics_en.ipynb
@@ -199,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating `mass_no_country` DataFrame"
+    "### Creating `mass_no_country` DataFrame from `mass`"
    ]
   },
   {
@@ -402,6 +402,13 @@
    "metadata": {},
    "source": [
     "### Adding `violent_response` column "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_`violent_response` indicated whether any of the three violent state responses occurred. 1 if **any** of those had occurred; 0 if **none** of those had occurred._"
    ]
   },
   {
