Added man with hammer logo

--- a/code/02a_Add_Global_Population.ipynb
+++ b/code/02a_Add_Global_Population.ipynb
@@ -4,8 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Add Global Population data to Mass protest data\n",
-    "Add Population Density\n",
+    "\n",
+    "# Mass Mobilization Project\n",
+    "<img style=\"float: right;\" src=\"../images/man_with_hammer.png\">\n",
+    "\n",
+    "\n",
+    "#### 0.2a Add Global Population and Population Density\n",
     "\n",
     "Data provided by the United Nations<br>\n",
     "https://population.un.org/wpp/Download/Standard/CSV/\n",
