--- a/code/04a_Multi_Label_Predictions.ipynb
+++ b/code/04a_Multi_Label_Predictions.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Mass Protest\n",
+    "# Mass Mobilization Project\n",
+    "<img style=\"float: right;\" src=\"../images/man_with_hammer.png\">\n",
+    "\n",
     "#### Import built models to predict responses with five United States protests\n",
     "\n",
     "Models in this notebook all use a Sklearn MultiOutputClassifier.\n",
