Renaming Modeling notebooks

--- a/code/02a_Add_Global_Population.ipynb
+++ b/code/02a_Add_Global_Population.ipynb
@@ -9,7 +9,7 @@
     "<img style=\"float: right;\" src=\"../images/man_with_hammer.png\">\n",
     "\n",
     "\n",
-    "#### 0.2a Add Global Population and Population Density\n",
+    "### 0.2 Collecting external data, add Global Population and Population Density\n",
     "\n",
     "Data provided by the United Nations<br>\n",
     "https://population.un.org/wpp/Download/Standard/CSV/\n",
@@ -18,7 +18,11 @@
     "* PopMale: Total male population (thousands)\n",
     "* PopFemale: Total female population (thousands)\n",
     "* PopTotal: Total population, both sexes (thousands)\n",
-    "* PopDensity: Population per square kilometre (thousands)"
+    "* PopDensity: Population per square kilometre (thousands)\n",
+    "\n",
+    "A lot of work in this notebook is renaming country names in the downloaded U.N. file to match the names of the protest rows in the Mass Protest data.\n",
+    "\n",
+    "Once that is completed, merge the data."
    ]
   },
   {
@@ -29,7 +33,6 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt \n",
     "import pickle"
    ]
   },
