--- a/code/05_Modeling-Custom_01.ipynb
+++ b/code/05_Modeling-Custom_01.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mass Mobilization Project\n",
+    "<img style=\"float: right;\" src=\"../images/man_with_hammer.png\">\n",
+    "\n",
+    "#### 05. Create Logistic Regression model\n",
+    "\n",
+    "This model performs analysis on a dataframe that has removed all state reponse columns with a value of 1 in the **ignore** column.\n",
+    "\n",
+    "This is a way to deal with severely imbalanced classes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
