--- a/code/05_Multi_Label_Modeling.ipynb
+++ b/code/05_Multi_Label_Modeling.ipynb
@@ -1,19 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-13e491b08691>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-13e491b08691>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    <img style=\"float: right;\" src=\"../images/man_with_hammer.png\">\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "source": [
+    "# Mass Mobilization Project\n",
+    "<img style=\"float: right;\" src=\"../images/man_with_hammer.png\">\n",
+    "\n",
+    "#### 05. Create Multilabel Classifier model\n",
+    "\n",
+    "Use MultiOutputClassifier to do labeling with a RandomForestClassifier.\n",
+    "\n",
+    "A RandomizedSearchCV search performs a large number of modeling using many different combinations of hyperparameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
