--- a/code/02b_Add_Prosperity_Index.ipynb
+++ b/code/02b_Add_Prosperity_Index.ipynb
@@ -4,6 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Mass Mobilization Project\n",
+    "<img style=\"float: right;\" src=\"../images/man_with_hammer.png\">\n",
+    "\n",
     "## Add Prosperity Index data to Mass protest data\n",
     "\n",
     "The Legatum Institute is a London-based think-tank... who worked with more than 100 academics and experts around the world with particular expertise in each of the pillars of prosperity to develop an appropriate taxonomy of discrete elements and supporting indicators which, when combined, accurately capture prosperity in the world.\n",
