--- a/code/03a_Multi_Label_Modeling.ipynb
+++ b/code/03a_Multi_Label_Modeling.ipynb
@@ -1,19 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mass Mobilization Project\n",
+    "<img style=\"float: right;\" src=\"../images/man_with_hammer.png\">\n",
+    "\n",
+    "\n",
+    "#### Models in this notebook create a MultiOutputClassifier.\n",
+    "\n",
+    "This model uses a RandomForestClassifier for each of the seven target variables in the dataset:\n",
+    " * arrests\n",
+    " * accomodation\n",
+    " * beatings\n",
+    " * crowddispersal\n",
+    " * ignore\n",
+    " * killings\n",
+    " * shootings\n",
+    " \n",
+    " After fitting the model, it is saved as a pickle file, which is then loaded into the model predictions notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-13e491b08691>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-13e491b08691>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    <img style=\"float: right;\" src=\"../images/man_with_hammer.png\">\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -68,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +254,7 @@
        "[3 rows x 71 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
