--- a/code/02b_Add_Prosperity_Index.ipynb
+++ b/code/02b_Add_Prosperity_Index.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Mass Mobilization Project\n",
-    "<img style=\"float: right;\" src=\"../images/man_with_hammer.png\">\n",
+    "<img style=\"float: right;\" src=\"../images/man_with_hammer.png\" />\n",
     "\n",
     "### 02. Collecting external data, add Prosperity Index data\n",
     "\n",
