revised final code and compiled data cleaning preprocessing

--- a/code/05_logistic_regression_gridsearch_imbalanced.ipynb
+++ b/code/05_logistic_regression_gridsearch_imbalanced.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mass Mobilization Project\n",
+    "<img style=\"float: right;\" src=\"../images/man_with_hammer.png\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -12,7 +20,7 @@
     "import seaborn as sns\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split, KFold, LeaveOneOut, cross_val_score, GridSearchCV\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
@@ -47,7 +55,12 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -211,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Using a GridSearch to find the best hyperparameters _**for each distinct target**_ that will be passed into my series of Logistic Regressions in the [06_log_reg_for_model_performance_&_coefficient_plots](projects/Mass-Protests/archive/06_log_reg_for_model_performance_&_coefficient_plots.ipynb) notebook**_\n",
+    "#### Using a GridSearch to find the best hyperparameters _**for each distinct target**_ that will be passed into my series of Logistic Regressions in the [06_log_reg_for_model_performance_and_coefficient_plots](projects/Mass-Protests/archive/06_log_reg_for_model_performance_&_coefficient_plots.ipynb) notebook**_\n",
     "\n",
     "_GridSearch code provided by Hayden._"
    ]
@@ -10919,6 +10932,13 @@
    "outputs": [],
    "source": [
     "pd.options.display.max_colwidth = 150"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_The hyperparameters in the `results_df` are what will be fed into my Logistic Regression function in the [06_log_reg_for_model_performance_and_coefficient_plots](projects/Mass-Protests/code/06_log_reg_for_model_performance_and_coefficient_plots.ipynb) notebook in this subrepo._"
    ]
   },
   {
