--- a/code/06_log_reg_for_model_performance_and_coefficient_plots.ipynb
+++ b/code/06_log_reg_for_model_performance_and_coefficient_plots.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mass Mobilization Project\n",
+    "<img style=\"float: right;\" src=\"../images/man_with_hammer.png\">"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +21,7 @@
     "\n",
     "import sklearn\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split, KFold, LeaveOneOut, cross_val_score\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
@@ -224,11 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mass_no_country = mass_no_country.drop(columns=[ 'country_Afghanistan',\n",
