Add banner image

--- a/code/01_Add_Protestor_ID_Type.ipynb
+++ b/code/01_Add_Protestor_ID_Type.ipynb
@@ -4,6 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Mass Mobilization Project\n",
+    "<img style=\"float: right;\" src=\"../images/man_with_hammer.png\">\n",
+    "\n",
     "## Protester/Participant Type IDs\n",
     "### Create standardized categories for type of protesters"
    ]
